--- a/src/style.css
+++ b/src/style.css
@@ -61,11 +61,15 @@ main {
 
 .meme {
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .meme--image {
     max-width: 100%;
     border-radius: 3px;
+    display: block;
+    margin: 0 auto;
 }
 
 .meme--text {
